# first-aid-ai-agent

./: ACCESSIBILITY_GUIDE.md  AI_IMPROVEMENTS_GUIDE.md  HEALTH_RECORDS_FEATURES.md  PREMIUM_VOICE_SETUP.md  README.md  app.py  pyproject.toml  requirements.txt
utils/: ai_helpers.py  ai_helpers_improved.py  google_tts_integration.py  health_records.py  map_helper.py  ui_helper.py  voice_assistant.py
