[tool.poetry]
name = "first-aid-ai-agent"
version = "0.1.0"
description = "Final capstone project for the AI Practitioner course"
authors = ["Mahdi Khrrousheh <mahdi.khrrousheh@gmail.com>" , "Monther Nabulsi <m.nabulsi00@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.50.0"
pillow = "^11.3.0"
pandas = "^2.3.3"
generativeai = "^0.0.1"
pandas-stubs = "^2.3.2.250926"
google-generativeai = "^0.8.5"
google-genai = "^1.45.0"
requests = "^2.31.0"
geopy = "^2.4.1"
folium = "^0.15.0"
streamlit-folium = "^0.15.0"
streamlit-js-eval = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"